--- a/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
@@ -1,7 +1,9 @@
 {
   "itemGroup.pisskaland_overhaul:main_item_group": "PisskaLand Overhaul",
   "block.pisskaland_overhaul.electrified_copper_block": "Наэлектризованный медный блок",
-  "item.pisskaland_overhaul.storm_scroll": "Свиток грозы",
+  "item.pisskaland_overhaul.wallet": "Кошель",
+  "item.pisskaland_overhaul.wallet_tooltip": "Количество монет",
+  "item.pisskaland_overhaul.svobucks": "СВОбакс",
   "item.pisskaland_overhaul.server_anthem_horn": "Гимн PisskaLand",
   "item.pisskaland_overhaul.server_anthem_horn_tooltip": "Национальный гимн PisskaLand"
 }
