--- a/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
@@ -1,9 +1,11 @@
 {
   "itemGroup.pisskaland_overhaul:main_item_group": "PisskaLand Overhaul",
-  "block.pisskaland_overhaul.electrified_copper_block": "Electrified Copper Block",
+  "block.pisskaland_overhaul.example_block": "Example block",
   "item.pisskaland_overhaul.wallet": "Wallet",
   "item.pisskaland_overhaul.wallet_tooltip_money_count": "Money count",
-  "item.pisskaland_overhaul.wallet_tooltip_owner": "Owner",
+  "command.pisskaland_overhaul.svobucks.give.fail": "Player \"{}\" not found!",
+  "command.pisskaland_overhaul.svobucks.give.no_permission": "You have not enough permission to use this command",
+  "command.pisskaland_overhaul.svobucks.give.success": "SVObucks were successfully given",
   "item.pisskaland_overhaul.svobucks": "SVObucks",
   "item.pisskaland_overhaul.server_anthem_horn": "PisskaLand Anthem",
   "item.pisskaland_overhaul.server_anthem_horn_tooltip": "PisskaLand National Anthem"
