--- a/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
@@ -6,7 +6,7 @@
   "command.pisskaland_overhaul.svobucks.give.fail": "Игрок \"{}\" не найден!",
   "command.pisskaland_overhaul.svobucks.give.success": "СВОбаксы были успешно выданы",
   "command.pisskaland_overhaul.svobucks.give.no_permission": "У вас недостаточно прав, чтобы использовать эту команду",
-  "item.pisskaland_overhaul.svobucks": "СВОбакс",
+  "item.pisskaland_overhaul.svobucks": "$SVO",
   "item.pisskaland_overhaul.server_anthem_horn": "Гимн PisskaLand",
   "item.pisskaland_overhaul.server_anthem_horn_tooltip": "Национальный гимн PisskaLand"
 }
