--- a/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
@@ -11,5 +11,6 @@
   "command.pisskaland_overhaul.wallet.erase.success": "Кошелек игрока был успешно очищен",
   "item.pisskaland_overhaul.svobucks": "$SVO",
   "item.pisskaland_overhaul.server_anthem_horn": "Гимн PisskaLand",
-  "item.pisskaland_overhaul.server_anthem_horn_tooltip": "Национальный гимн PisskaLand"
+  "item.pisskaland_overhaul.server_anthem_horn_tooltip": "Национальный гимн PisskaLand",
+  "pisskaland_overhaul.version_mismatched": "PisskaLand Overhaul: Версия мода не совпадает с серверной"
 }
