--- a/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
@@ -12,5 +12,6 @@
   "item.pisskaland_overhaul.svobucks": "$SVO",
   "item.pisskaland_overhaul.server_anthem_horn": "Гимн PisskaLand",
   "item.pisskaland_overhaul.server_anthem_horn_tooltip": "Национальный гимн PisskaLand",
-  "pisskaland_overhaul.version_mismatched": "PisskaLand Overhaul: Версия мода не совпадает с серверной"
+  "pisskaland_overhaul.version_mismatched": "PisskaLand Overhaul: Версия мода не совпадает с серверной",
+  "block.pisskaland_overhaul.altar_glass": "Стекло алтаря"
 }
