--- a/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
@@ -17,6 +17,7 @@
   "advancement.pisskaland_overhaul.make_altar.title": "А вы верите в бога?",
   "advancement.pisskaland_overhaul.make_altar.description": "Создайте и завершите алтарь",
   "pisskaland_overhaul.pray.success": "Вы помолились",
+  "pisskaland_overhaul.pray.failed": "Структура алтаря неправильная",
   "pisskaland_overhaul.pray.already": "Вы уже помолились",
   "pisskaland_overhaul.pray.too_many_days_without_praying": "Вы слишком долго не молились...",
   "command.pisskaland_overhaul.config.reload.success": "Конфигурация была успешно перезагружена"
