--- a/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
@@ -18,6 +18,8 @@
   "advancement.pisskaland_overhaul.make_altar.description": "Build and complete the altar",
   "pisskaland_overhaul.pray.success": "You have prayed",
   "pisskaland_overhaul.pray.failed": "The structure of altar is wrong",
+  "pisskaland_overhaul.pray.became_a_devout": "You get the feeling that prayer empowers you...",
+  "pisskaland_overhaul.pray.pray_streak_was_zeroed": "Looks like you missed today's prayer...",
   "pisskaland_overhaul.pray.already": "You have already prayed",
   "pisskaland_overhaul.pray.too_many_days_without_praying": "You've gone too long without praying...",
   "command.pisskaland_overhaul.config.reload.success": "Config was successfully reloaded"
