add ukrainian loc

--- a/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
@@ -3,8 +3,8 @@
   "item.pisskaland_overhaul.wallet": "Wallet",
   "item.pisskaland_overhaul.wallet_tooltip_money_count": "Money count",
   "command.pisskaland_overhaul.no_permission": "You have not enough permission to use this command",
-  "command.pisskaland_overhaul.svobucks.give.success": "SVObucks were successfully given",
-  "command.pisskaland_overhaul.svobucks.erase.success": "SVObucks were successfully cleared from inventory",
+  "command.pisskaland_overhaul.svobucks.give.success": "$SVO were successfully given",
+  "command.pisskaland_overhaul.svobucks.erase.success": "$SVO were successfully cleared from inventory",
   "command.pisskaland_overhaul.wallet.increase.success": "Player's wallet was increased successfully",
   "command.pisskaland_overhaul.wallet.reduce.success": "Player's wallet was reduced successfully",
   "command.pisskaland_overhaul.wallet.reduce.fail": "There is less $SVO in player's wallet than you want to reduce!",
