--- a/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/ru_ru.json
@@ -3,8 +3,8 @@
   "item.pisskaland_overhaul.wallet": "Кошель",
   "item.pisskaland_overhaul.wallet_tooltip_money_count": "Количество монет",
   "command.pisskaland_overhaul.no_permission": "У вас недостаточно прав, чтобы использовать эту команду",
-  "command.pisskaland_overhaul.svobucks.give.success": "СВОбаксы были успешно выданы",
-  "command.pisskaland_overhaul.svobucks.erase.success": "СВОбаксы былы успешно очищены с инвентаря",
+  "command.pisskaland_overhaul.svobucks.give.success": "$SVO были успешно выданы",
+  "command.pisskaland_overhaul.svobucks.erase.success": "$SVO были успешно очищены с инвентаря",
   "command.pisskaland_overhaul.wallet.increase.success": "Кошель игрока был успешно увеличен",
   "command.pisskaland_overhaul.wallet.reduce.success": "Кошель игрока был успешно уменьшен",
   "command.pisskaland_overhaul.wallet.reduce.fail": "В кошеле игрока меньше $SVO, чем вы хотите уменьшить!",
