--- a/src/main/resources/assets/pisskaland_overhaul/lang/uk_ua.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/uk_ua.json
@@ -11,7 +11,7 @@
   "command.pisskaland_overhaul.wallet.erase.success": "Гаманець гравця було успішно очищено",
   "item.pisskaland_overhaul.svobucks": "$SVO",
   "item.pisskaland_overhaul.server_anthem_horn": "Гімн PisskaLand",
-  "item.pisskaland_overhaul.server_anthem_horn_tooltip": "Национальный гимн PisskaLand",
+  "item.pisskaland_overhaul.server_anthem_horn_tooltip": "Національний гімн PisskaLand",
   "pisskaland_overhaul.version_mismatched": "PisskaLand Overhaul: Версія мода не збігається із серверною",
   "block.pisskaland_overhaul.altar_glass": "Вівтарне скло",
   "advancement.pisskaland_overhaul.make_altar.title": "А ви вірите в бога?",
