--- a/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/en_us.json
@@ -23,5 +23,9 @@
   "pisskaland_overhaul.pray.prayed_day_as_devout": "Today, you feel better than usual...",
   "pisskaland_overhaul.pray.already": "You have already prayed",
   "pisskaland_overhaul.pray.too_many_days_without_praying": "You've gone too long without praying...",
-  "command.pisskaland_overhaul.config.reload.success": "Config was successfully reloaded"
+  "command.pisskaland_overhaul.config.reload.success": "Config was successfully reloaded",
+  "command.pisskaland_overhaul.denylist.add.success": "Item was successfully added into denylist!",
+  "command.pisskaland_overhaul.denylist.add.already_in_list": "This item is already in denylist!",
+  "command.pisskaland_overhaul.denylist.remove.success": "Item was successfully removed from denylist!",
+  "command.pisskaland_overhaul.denylist.remove.not_in_list": "This item is not in denylist!"
 }
