--- a/src/main/resources/assets/pisskaland_overhaul/lang/uk_ua.json
+++ b/src/main/resources/assets/pisskaland_overhaul/lang/uk_ua.json
@@ -23,5 +23,11 @@
   "pisskaland_overhaul.pray.prayed_day_as_devout": "Сьогодні ви почуваєтеся краще, ніж зазвичай...",
   "pisskaland_overhaul.pray.already": "Ви вже помолилися",
   "pisskaland_overhaul.pray.too_many_days_without_praying": "Ви занадто довго не молилися...",
-  "command.pisskaland_overhaul.config.reload.success": "Конфігурацію було успішно перезавантажено"
+  "command.pisskaland_overhaul.config.reload.success": "Конфігурацію було успішно перезавантажено",
+  "command.pisskaland_overhaul.denylist.add.success": "Предмет успішно додано у денілист!",
+  "command.pisskaland_overhaul.denylist.add.already_in_list": "Цей предмет вже є у денілисті!",
+  "command.pisskaland_overhaul.denylist.remove.success": "Предмет був успішно видален із денілиста!",
+  "command.pisskaland_overhaul.denylist.remove.not_in_list": "Цього предмета немає в денілисті!",
+  "pisskaland_overhaul.chow_down_on.eaten_once": "Зрештою тобі набридає їсти одну й ту саму їжу по кілька разів...",
+  "pisskaland_overhaul.chow_down_on.eaten_twice": "Я не буду це їсти."
 }
